@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-10T08:26:37Z",
-  "count" : 184,
+  "timestamp" : "2022-07-10T16:30:52Z",
+  "count" : 57,
   "count_minmax" : [ 52, 354 ],
-  "count_decinc" : [ -170, +354 ],
-  "uniques" : 2,
+  "count_decinc" : [ -297, +354 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
