@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-07-10T08:26:37Z",
+  "timestamp" : "2022-07-10T16:30:52Z",
   "count_outdated" : 37528,
   "uniques_outdated" : 682,
-  "count" : 42408,
-  "uniques" : 713,
+  "count" : 42386,
+  "uniques" : 712,
   "clones" : [
     {
       "timestamp": "2022-06-26T00:00:00Z",
-      "count": 184,
+      "count": 57,
       "count_minmax": [ 52, 354 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-07-10T00:00:00Z",
-      "count": 121,
-      "count_minmax": [ 49, 121 ],
+      "count": 226,
+      "count_minmax": [ 49, 226 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
     }
