@@ -1,11 +1,11 @@
 {
-  "count": 4880,
+  "count": 4858,
   "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-06-26T00:00:00Z",
-      "count": 184,
-      "uniques": 2
+      "count": 57,
+      "uniques": 1
     },
     {
       "timestamp": "2022-06-27T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-07-10T00:00:00Z",
-      "count": 121,
+      "count": 226,
       "uniques": 2
     }
   ]
