@@ -1,3 +1,10 @@
+2022-07-10T16:30:52Z:
+* notice: last 14d: unq all: 3 4858
+* notice: prev accum: outdated-unq outdated-all / unq all: 682 37528 / 713 42408
+* notice: next accum: outdated-unq outdated-all / unq all: 682 37528 / 712 42386
+* notice: prev exec diff / last date diff / accum: unq all: +0 +105 -1 -127 / +2 +226 -0 -0 / 2 226
+* notice: removed / changed dates: [] / [2022-06-26 2022-07-10]
+
 2022-07-10T08:26:37Z:
 * notice: last 14d: unq all: 3 4880
 * notice: prev accum: outdated-unq outdated-all / unq all: 682 37528 / 712 42438
